# distributed_cicd

./: Cargo.toml  README.md  dagger.json  deploy.sh  docker-compose.yml  setup.sh
client/: Cargo.toml
client/src/: main.rs
coordinator/: Cargo.toml  Dockerfile
coordinator/src/: handlers.rs  main.rs  models.rs  routes.rs
dagger/: go.mod  go.sum  main.go
dagger_rust/: Cargo.toml
dagger_rust/src/: main.rs
k6/: build_task.lua  test.js
kubernetes/: config-hpa.yml  coordinator-deployment.yml  coordinator-ingress.yml  coordinator-service.yml  etcd-service.yml  etcd-state.yml  grafana-deployment.yml  grafana-ingress.yml  mongo-deployment.yml  mongo-service.yml  mongo-stateful.yml  prometheus-deployment.yml  worker-deployment.yml  worker-hpa.yml  worker-service.yml
load_testing/: hello.py  pyproject.toml
nginx/: nginx.conf
shared/: Cargo.toml
worker/: Cargo.toml  Dockerfile
worker/src/: main.rs
worker_go/: Dockerfile  Dockerfile2  go.mod  go.sum  history.txt  worker.go
worker_go/client/src/: main.rs
worker_go/myminio/codebucket/: go.mod
worker_go/python/: app.py
worker_go/shared/src/: lib.rs
