[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls",
    "json",
] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0.217", features = ["derive"] }
shared = { path = "../shared" }
clap = { version = "4.5.26", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
