[package]
name = "coordinator"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
redis = "0.28.1"
tokio = { version = "1.43.0", features = ["full"] }
serde = { version = "1.0.217", features = ["derive"] }
#shared = { path = "../shared" }
serde_json = "1.0.136"
