[package]
name = "worker"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.9"
reqwest = { version = "0.12", features = ["json"] }
redis = "0.28.1"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0.217", features = ["derive"] }
prometheus = "0.13.4"
prometheus_exporter = "0.8.5"
lazy_static = "1.5.0"
#shared = { path = "../shared" }
